# hecate-compiler

./: .gitignore  Cargo.toml  out.asm  out.ir  out.ll  rust-toolchain.toml
.github/: README.md
.github/workflows/: rust.yml
examples/: hello_world.hec
hecate_builder/: Cargo.toml
hecate_compiler/: Cargo.toml
hecate_compiler/src/: main.rs
hecate_ir_gen/: Cargo.toml
hecate_ir_gen/src/: gen.rs  ir.rs  lib.rs
hecate_lexer/: Cargo.toml
hecate_lexer/src/: lexer.rs  lib.rs  tests.rs  token.rs
hecate_llvm_gen/: Cargo.toml
hecate_llvm_gen/src/: gen.rs  ir.rs  lib.rs
hecate_parser/: Cargo.toml
hecate_parser/src/: parser.rs  types.rs
hecate_resolver/: Cargo.toml
hecate_resolver/src/: infer_types.rs  lib.rs  resolve_names.rs
hecate_util/: Cargo.toml
hecate_util/src/: error.rs  lib.rs  logging.rs  span.rs
hecate_util/src/ast/: mod.rs
hecate_validator/: Cargo.toml
test_cases/accept/: binary_ops.hec
