[package]
name = "hecate_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecate_lexer = { version = "0.1.0", path = "../hecate_lexer" }
hecate_parser = { version = "0.1.0", path = "../hecate_parser" }
hecate_resolver = { version = "0.1.0", path = "../hecate_resolver" }
hecate_llvm_gen = { version = "0.1.0", path = "../hecate_llvm_gen" }

hecate_util = { version = "0.1.0", path = "../hecate_util" }

