[package]
name = "hecate_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecate_lexer = { version = "0.1.0", path = "../hecate_lexer" }
hecate_util = { version = "0.1.0", path = "../hecate_util" }
